--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,5 +12,6 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm ci
+      - run: npx prisma generate
       - run: npm run build --if-present
       - run: npm run test
